--- a/src/application/resources/AnswerSetInspection.fxml
+++ b/src/application/resources/AnswerSetInspection.fxml
@@ -15,7 +15,15 @@
    <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <center>
-         <ListView fx:id="allAtoms" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
+	      <VBox>
+	         <ListView fx:id="allAtoms" prefHeight="200.0" prefWidth="200.0"/>
+	         <Label fx:id="textLevels" text="Select the cost@level to explain optimality">
+               <HBox.margin>
+                  <Insets left="10.0"/>
+               </HBox.margin>
+            </Label>
+	         <ListView fx:id="allLevels" prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
+	      </VBox>
       </center>
       <top>
          <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -34,9 +42,14 @@
       <bottom>
          <VBox maxHeight="60.0" minHeight="60.0" prefHeight="60.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
-               <Button alignment="CENTER" mnemonicParsing="false" onAction="#explainAtom" text="Explain">
+               <Button alignment="CENTER" mnemonicParsing="false" onAction="#explainAtom" text="Explain Atom">
                   <HBox.margin>
                      <Insets bottom="5.0" top="5.0"/>
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="optimalityButton" alignment="CENTER" mnemonicParsing="false" onAction="#explainOptimality" text="Explain Optimality">
+                  <HBox.margin>
+                     <Insets left="10.0" bottom="5.0" top="5.0"/>
                   </HBox.margin>
                </Button>
             </HBox>
