--- a/src/application/resources/Editor.fxml
+++ b/src/application/resources/Editor.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -36,6 +37,18 @@
                 <Button mnemonicParsing="false" onAction="#justify" text="Explain" />
                 <CheckBox fx:id="checkRules" selected="true" style="-fx-padding: 4 0 0 0;" text="Include rules" />
                 <CheckBox fx:id="checkLiterals" selected="true" style="-fx-padding: 4 0 0 0;" text="Include literals" />
+               
+			    <RadioButton fx:id="singleAS" style="-fx-padding: 4 0 0 0;" text="1 Answer Set">
+			        <HBox.margin>
+			            <Insets right="3.0"/>
+			        </HBox.margin>
+			    </RadioButton>
+			
+			    <RadioButton fx:id="tenAS" style="-fx-padding: 4 0 0 0;" text="10 Answer Sets">
+			        <HBox.margin>
+			            <Insets right="30.0" bottom="10.0"/>
+			        </HBox.margin>
+			    </RadioButton>
             <ProgressBar fx:id="progressBar" prefWidth="200.0" progress="0.0" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets right="5.0" />
