--- a/src/application/resources/UnsatExplanation.fxml
+++ b/src/application/resources/UnsatExplanation.fxml
@@ -15,11 +15,6 @@
    <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <top>
          <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" text="Back">
-               <HBox.margin>
-                  <Insets bottom="5.0" left="10.0" top="5.0" />
-               </HBox.margin>
-            </Button>
             <Button fx:id="homeButton" mnemonicParsing="false" onAction="#home" text="Home">
                <HBox.margin>
                   <Insets left="10.0" />
@@ -27,7 +22,7 @@
             </Button>
             <ScrollPane prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" HBox.hgrow="ALWAYS">
                <content>
-                  <Label fx:id="label" text="Explanation" />
+                  <Label fx:id="label" text="Explanation of why the program is Unsatisfiable" />
                </content>
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
