--- a/src/application/resources/UnsatExplanation.fxml
+++ b/src/application/resources/UnsatExplanation.fxml
@@ -22,7 +22,7 @@
             </Button>
             <ScrollPane prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" HBox.hgrow="ALWAYS">
                <content>
-                  <Label fx:id="label" text="Explanation of why the program is Unsatisfiable" />
+                  <Label fx:id="label" text="Explanation of why the program is unsatisfiable" />
                </content>
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
